# bouffalo_sdk

./: .clang-format  .clangd  .cproject  .gitignore  .project  CHANGELOG.md  CKLink_BL616.launch  CKLink_BL702.launch  CKLink_BL808.launch  CLAUDE.md  CMakeLists.txt  JLink_BL702.launch  Jlink_bl_mcu_sdk.launch  Kconfig  LICENSE  Makefile  Preload.cmake  README.md  README_zh.md  ReleaseNotes  VERSION  bl_mcu_flash.launch  bl_mcu_ram.launch  board.build  project.build
bsp/: CMakeLists.txt  sdk_version.c  sdk_version.h.in
bsp/board/: CMakeLists.txt
bsp/board/bl602/: bl602_config.h  board.c
bsp/board/bl602_iot/: bl602_config.h  board.c  clock_config.h  peripheral_config.h  pinmux_config.h
bsp/board/bl602dk/: CMakeLists.txt  bl602_flash.ld  bl602_ram.ld  board.c  board.h  board_gpio.c  board_gpio.h  fw_header.c  fw_header.h
bsp/board/bl616cldk/: CMakeLists.txt  bl616cl_chip_psram.ld  bl616cl_common.ld.in  bl616cl_dv.ld  bl616cl_flash.ld  bl616cl_lp.ld  bl616cl_ram.ld  bl616cl_rom.ld  board.c  board_flash_psram.c  board_flash_psram.h  board_gpio.c  board_gpio.h  board_rf.c  fw_header.c  wireless_spur.c
bsp/board/bl616ddk/: CMakeLists.txt  bl616d_common.ld.in  bl616d_dv.ld  bl616d_flash.ld  bl616d_flash_lp.ld  bl616d_flash_np.ld  bl616d_psram_ap.ld  bl616d_psram_np.ld  bl616d_ram_ap.ld  bl616d_ram_ap_b0.ld  bl616d_ram_lp_b0.ld  bl616d_wfa_flash.ld  board.c  board.h  board_flash_psram.c  board_gpio.c  board_gpio.h  board_rf.c  fw_header.c  fw_header.h  run_in_ram_function.ld.in
bsp/board/bl616dk/: CMakeLists.txt  bl616_chip_psram.ld  bl616_common.ld.in  bl616_flash.ld  bl616_lp.ld  bl616_ram.ld  bl616_wfa_flash.ld  board.c  board.h  board_flash_psram.c  board_flash_psram.h  board_gpio.c  board_gpio.h  board_rf.c  board_rf.h  fw_header.c  fw_header.h  wireless_regdb.c
bsp/board/bl616ldk/: CMakeLists.txt  bl616l_chip_psram.ld  bl616l_dv.ld  bl616l_flash.ld  bl616l_ram.ld  bl616l_rom.ld  board.c  board.h  board_flash_psram.c  board_gpio.c  (+4 more)
bsp/common/: CMakeLists.txt
components/: CMakeLists.txt  Kconfig
components/TensorFlowLite/: CMakeLists.txt
components/TinyMaix/: CMakeLists.txt
components/ai/: CMakeLists.txt
components/bflog/: CMakeLists.txt  bflog.c  bflog.h  bflog_default.h  bflog_dlist.h
components/ble/: CMakeLists.txt  ble_flags.cmake
components/cherryusb/: CMakeLists.txt  cherryusb_config_template.h
components/crypto/: CMakeLists.txt  Kconfig
components/debug/: CMakeLists.txt  MM_LEAK_TRACE.md
components/easyflash4/: CMakeLists.txt
components/fatfs/: CMakeLists.txt  diskio.c  diskio.h  fatfs_errorcode.c  fatfs_posix_api.c  fatfs_posix_api.h  ff.c  ff.h  ffconf.h  ffsystem.c  ffunicode.c
components/fota/: CMakeLists.txt
components/freertos/: CMakeLists.txt  croutine.c  event_groups.c  freertos_port.c  list.c  queue.c  stream_buffer.c  tasks.c  timers.c
components/fs/: CMakeLists.txt
components/graphics/: CMakeLists.txt
components/ipc/: CMakeLists.txt
components/iperf/: CMakeLists.txt  iperf.c  iperf.h  iperf_cli.c  iperf_old.c
components/libc/: CMakeLists.txt  assert.c  printf.c  reent.h  snprintf.c  sprintf.c  sscanf.c  stdatomic.c  vprintf.c  vsnprintf.c
components/libc_n900/: CMakeLists.txt  Kconfig  assert.c  printf.c  sprintf.c  stdatomic.c  vsnprintf.c  vsnprintf_nano.c  vsprintf.c
components/lua/: CMakeLists.txt
components/lvgl/: CMakeLists.txt  README.md  lv_api_map.h  lv_conf_internal.h  lv_conf_kconfig.h  lvgl.h
components/lwip/: CMakeLists.txt  lwipopts.h
components/lzma/: CMakeLists.txt
components/mm/: CMakeLists.txt  mem.c  mem.h  mm.c  mm.h  mm_config.h  mm_debug.c
components/multimedia/: .gitignore  CMakeLists.txt  README.md  README_zh.md
components/net/: CMakeLists.txt  Kconfig
components/os/: CMakeLists.txt
components/pikascript/: requestment.txt
components/romfs/: bl_romfs.c  bl_romfs.h
components/runtime/: CMakeLists.txt
components/shell/: CMakeLists.txt  drv_shell.c  drv_shell.h  shell.c  shell.h  shell_auto.c  shell_cfg.h  shell_config.h  shell_freertos.c  shell_fs.c
components/sysinit/: CMakeLists.txt  sysinit.c  sysinit.h
components/tlsf/: CMakeLists.txt  bflb_tlsf.c  bflb_tlsf.h  tlsf.c
components/usb/: CMakeLists.txt
components/usb_stack/: CMakeLists.txt
components/utils/: CMakeLists.txt
components/wireless/: CMakeLists.txt  Kconfig  macsw_plat.c
components/xz/: CMakeLists.txt  xz.h  xz.mk  xz_config.h  xz_crc32.c  xz_crc64.c  xz_dec_bcj.c  xz_dec_lzma2.c  xz_dec_stream.c  xz_dec_test.c  xz_decompress.c  xz_lzma2.h  xz_port.c  xz_private.h  xz_stream.h
drivers/lhal/: .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  bouffalo.mk
examples/boot2_isp/: CMakeLists.txt  Makefile  README.md  ReadMe  bflb_eflash_loader.h  bflb_eflash_loader_cmds.c  bflb_eflash_loader_cmds.h  bflb_eflash_loader_interface.c  bflb_eflash_loader_interface.h  bflb_eflash_loader_uart.c  bflb_eflash_loader_uart.h  bflb_eflash_loader_usb.c  bflb_eflash_loader_usb.h  bflb_sp_boot_decompress.c  bflb_sp_boot_decompress.h  bflb_sp_boot_parser.c  bflb_sp_boot_parser.h  bflb_sp_bootinfo.h  bflb_sp_common.c  bflb_sp_common.h  bflb_sp_media_boot.c  bflb_sp_media_boot.h  bflb_sp_port.c  bflb_sp_port.h  bflb_sp_ram_image_boot.c  blsp_boot_decompress.c  blsp_boot_decompress.h  blsp_boot_parser.c  blsp_boot_parser.h  blsp_bootinfo.h  blsp_common.c  blsp_common.h  blsp_media_boot.c  blsp_media_boot.h  blsp_port.c  blsp_port.h  blsp_ram_image_boot.c  blsp_version.h  boot2_release.py  defconfig  (+8 more)
examples/coremark_v1.01/: CMakeLists.txt  README.md  core_main.c  core_portme.c  defconfig  flash_prog_cfg.ini  main.c  proj.conf
examples/dhrystone/: CMakeLists.txt  Makefile  README.md  dhry.h  dhry_1.c  dhry_2.c  flash_prog_cfg.ini  main.c
examples/littlefs/: CMakeLists.txt  FreeRTOSConfig.h  Makefile  README.md  defconfig  flash_prog_cfg.ini  main.c  proj.conf
examples/pikapython/: .gitignore  CMakeLists.txt  FreeRTOSConfig.h  Makefile  README.md  flash_prog_cfg.ini  lcd_conf_user.h  lv_conf.h  main.c  make.sh  make_bl616.sh  make_bl618.bat  pika_config.h  proj.conf  usb_config.h  usbd_cdc_user.c  usbd_cdc_user.h
(+9380 files in other folders)
