add_subdirectory(ai)
add_subdirectory(crypto)
add_subdirectory(fs)
add_subdirectory(graphics)
add_subdirectory(libc)
add_subdirectory(lzma)
add_subdirectory(mm)
add_subdirectory(net)
add_subdirectory(os)
sdk_add_subdirectory_ifdef(CONFIG_IPERF iperf)
sdk_add_subdirectory_ifdef(CONFIG_SHELL shell)
add_subdirectory(usb)
add_subdirectory(utils)
add_subdirectory(wireless)
sdk_add_subdirectory_ifdef(CONFIG_MULTIMEDIA multimedia)
sdk_add_subdirectory_ifdef(CONFIG_EASYFLASH4 easyflash4)
