add_subdirectory(ai)
add_subdirectory(crypto)
sdk_add_subdirectory_ifdef(CONFIG_BACKTRACE debug)
add_subdirectory(fs)
add_subdirectory(graphics)
add_subdirectory(mm)
add_subdirectory(sysinit)
if("${CHIP}" STREQUAL "bl618dg" AND "${CPU_MODEL}" STREQUAL "b0")
add_subdirectory(libc_n900)
else()
add_subdirectory(libc)
endif()
add_subdirectory(lzma)
add_subdirectory(net)
add_subdirectory(os)
sdk_add_subdirectory_ifdef(CONFIG_IPERF iperf)
sdk_add_subdirectory_ifdef(CONFIG_SHELL shell)
add_subdirectory(usb)
add_subdirectory(utils)
add_subdirectory(wireless)
sdk_add_subdirectory_ifdef(CONFIG_MULTIMEDIA multimedia)
sdk_add_subdirectory_ifdef(CONFIG_IPC ipc)
sdk_add_subdirectory_ifdef(CONFIG_FOTA fota)
