sdk_generate_library()

sdk_library_add_sources(core/nh_ctrlpath.c)
sdk_library_add_sources(core/nh_endpoint.c)
sdk_library_add_sources(core/nh_filter.c)
sdk_library_add_sources(core/nh_hub.c)
sdk_library_add_sources(core/nh_runtime.c)
sdk_library_add_sources(profile/nh_profile_builtin.c)
sdk_library_add_sources(profile/nh_profile_select.c)
sdk_library_add_sources(profile/nh_profile_sdio.c)
sdk_library_add_sources(profile/nh_profile_usb.c)
sdk_library_add_sources(profile/nh_profile_spi.c)
sdk_library_add_sources(bootstrap/nh_bootstrap.c)
sdk_library_add_sources(diag/nethub_cli.c)
sdk_library_add_sources(diag/nh_pbuf_dump.c)
sdk_library_add_sources(backend/wifi/nh_wifi_bridge.c)
sdk_library_add_sources_ifdef(CONFIG_WL80211 backend/wifi/nh_wifi_backend_wl80211.c)
sdk_library_add_sources_ifdef(CONFIG_FHOST backend/wifi/nh_wifi_backend_fhost.c)
sdk_library_add_sources(backend/host/usb/transport_usb.c)
sdk_library_add_sources(backend/host/spi/transport_spi.c)

sdk_add_include_directories(include)
sdk_add_private_include_directories(core)
sdk_add_private_include_directories(profile)
sdk_add_private_include_directories(diag)
sdk_add_private_include_directories(backend/wifi)
sdk_add_private_include_directories(backend/host/sdio)
sdk_add_private_include_directories(backend/host/usb)
sdk_add_private_include_directories(backend/host/spi)

sdk_add_compile_definitions(-DCONFIG_NETHUB_DEBUG)

add_subdirectory(backend/host/sdio)
