if(CONFIG_GEN_ROM)
    if((${CHIP} STREQUAL "bl616l"))
        add_subdirectory(rom_btblecontroller_bl616l_A0)
    endif()
else()
    include(${CMAKE_CURRENT_SOURCE_DIR}/ble_common.cmake)

    if(NOT CONFIG_BT_CONTROLLER_DISABLE)
        if((${CHIP} STREQUAL "bl702") OR (${CHIP} STREQUAL "bl602"))
            sdk_add_include_directories(blecontroller/ble_inc)
            if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/blecontroller/lib/libblecontroller_${CHIP}_${CONFIG_BLECONTROLLER_LIB}.a)
            sdk_add_static_library(blecontroller/lib/libblecontroller_${CHIP}_${CONFIG_BLECONTROLLER_LIB}.a)
            else()
            sdk_add_static_library(${SDK_DEMO_PATH}/${BUILD_DIR}/build_blecontroller/libblecontroller_${CHIP}_${CONFIG_BLECONTROLLER_LIB}.a)
            endif()
        else()
            sdk_add_include_directories(btblecontroller/btble_inc)
            sdk_add_include_directories(btblecontroller/btblecontroller_port)
            if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/btblecontroller/lib/libbtblecontroller_${CHIP}_${CONFIG_BTBLECONTROLLER_LIB}.a)
            sdk_add_static_library(btblecontroller/lib/libbtblecontroller_${CHIP}_${CONFIG_BTBLECONTROLLER_LIB}.a)
            else()
            sdk_add_static_library(${SDK_DEMO_PATH}/${BUILD_DIR}/build_btblecontroller/libbtblecontroller_${CHIP}_${CONFIG_BTBLECONTROLLER_LIB}.a)
            endif()
        endif()
    endif()

    if(NOT CONFIG_BLE_HOST_DISABLE)
        add_subdirectory(blestack)
        if (CONFIG_BT_MESH)
            add_subdirectory(blemesh)
            sdk_add_subdirectory_ifdef(CONFIG_BT_MESH_MODEL blemesh_model)
        endif()
        sdk_add_subdirectory_ifdef(CONFIG_BT_BREDR btprofile)
        sdk_add_subdirectory_ifdef(CONFIG_AUTO_PTS bleptstest)
    endif()
endif()

# disable undef warning
sdk_add_compile_options(-Wno-undef)
